--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ variables:
   DOCKER_STAGING_IMAGE_NAME: docker.registry.verbio.com/csr/staging/asr4
   DOCKER_STABLE_IMAGE_NAME: docker.registry.verbio.com/csr/stable/asr4
   DOCKER_SPEECH_CENTER_IMAGE_NAME: docker.registry.verbio.com/voice-center/testing/asr4
-  DOCKER_IMAGE_VERSION: ${CI_COMMIT_REF_SLUG}
+  DOCKER_IMAGE_VERSION: $CI_COMMIT_REF_SLUG
   MODELS_PATH: /mnt/shared/squad2/projects/asr4models/
   AWS_ECR_URL: 321880733545.dkr.ecr.us-east-1.amazonaws.com
   AWS_REGION: us-east-1
@@ -28,9 +28,9 @@ variables:
 settings:
   stage: .pre
   rules:
-    - if: ${CI_COMMIT_TAG}
+    - if: $CI_COMMIT_TAG
       variables:
-        DOCKER_IMAGE_VERSION: "${CI_COMMIT_TAG}"
+        DOCKER_IMAGE_VERSION: $CI_COMMIT_TAG
     - when: always
   script:
     - echo "DOCKER_IMAGE_VERSION=${DOCKER_IMAGE_VERSION}" | tee -a settings.env
