Set docker image in job.env

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -76,6 +76,7 @@ lint:rust:nightly:
 unit-testing:
   stage: test
   before_script:
+    - echo "DIV = ${DOCKER_IMAGE_VERSION}"
     - pip install .[server,cpu,test]
   script:
     - python3 --version
@@ -105,6 +106,7 @@ unit-testing:rust:
 functional-testing:endpoints:
   stage: test
   before_script:
+    - echo "DIV = ${DOCKER_IMAGE_VERSION}"
     - wget https://github.com/bojand/ghz/releases/download/v0.111.0/ghz-linux-x86_64.tar.gz
     - tar -xzf ghz-linux-x86_64.tar.gz
     - mv ghz /bin
@@ -175,7 +177,9 @@ build:python:
     - tags
     - merge_requests
   before_script:
-    - echo JOB_ID=$CI_JOB_ID >> job.env
+    - echo "DIV = ${DOCKER_IMAGE_VERSION}"
+    - echo JOB_ID=$CI_JOB_ID >> settings.env
+    - echo "DOCKER_IMAGE_VERSION = ${DOCKER_IMAGE_VERSION}" >> settings.env
   script:
     - export MAKEFLAGS="-j4"
     - pip install build grpcio grpcio-tools
@@ -190,7 +194,7 @@ build:python:
       - "*.whl"
       - "*.pb"
     reports:
-      dotenv: job.env
+      dotenv: settings.env
 
 build:rust:
   stage: package
