--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,8 @@ server = [
     "soxr >= 0.3.3",
     "sox >= 1.4.1",
     "scipy >= 1.10.0",
+    "flashligth" >= "0.1.1",
+    "flashligth-text" >= "0.0.1",
     "grpcio-health-checking >= 1.47.0",
     "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@gitlab.lan.verbio.com/api/v4/projects/949/packages/pypi/files/dd9cfb194c7c3c4652e1a320dfadf71d00db75c3081aa554f3b31bc4faf9f4b0/pyformatter-1.3.11-cp311-cp311-linux_x86_64.whl ; python_version=='3.11' and platform_system=='Linux'",
     "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@gitlab.lan.verbio.com/api/v4/projects/949/packages/pypi/files/789824799d8386891c8dfefd81968d714eaa804eb5a3c43d32b996c37a091f99/pyformatter-1.3.11-cp310-cp310-linux_x86_64.whl ; python_version=='3.10' and platform_system=='Linux'",
