--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,6 +40,7 @@ settings:
 
 lint:python:
   stage: lint
+  when: always
   before_script:
     - pip install flake8==3.9.2 black==22.6.0
   script:
