--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,7 +60,6 @@ unit-testing:
   only:
     - tags
     - merge_requests
-    - branches
     - master
     - web
   before_script:
@@ -81,7 +80,6 @@ functional-testing:endpoints:
   only:
     - tags
     - merge_requests
-    - branches
     - master
     - web
   before_script:
@@ -100,7 +98,6 @@ functional-testing:cpu:
   only:
     - tags
     - merge_requests
-    - branches
     - master
     - web
   before_script:
@@ -113,7 +110,6 @@ functional-testing:e2e:
   only:
     - tags
     - merge_requests
-    - branches
     - master
     - web
   before_script:
@@ -129,7 +125,7 @@ integration-testing:cpu:
   stage: test
   only:
     - tags
-    - branches
+    - merge_requests
     - web
     - master
   before_script:
@@ -145,7 +141,7 @@ integration-testing:gpu:
   image: docker.registry.verbio.com/engineering/devops/debian10-intel-oneapi-python-cuda-tensorrt:3.9
   only:
     - tags
-    - branches
+    - merge_requests
     - web
     - master
   tags:
