--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,6 @@ server = [
     "soxr >= 0.3.3",
     "sox >= 1.4.1",
     "scipy >= 1.10.0",
-    "flashligth-sequence >= 0.1",
     "grpcio-health-checking >= 1.47.0",
     "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@gitlab.lan.verbio.com/api/v4/projects/949/packages/pypi/files/dd9cfb194c7c3c4652e1a320dfadf71d00db75c3081aa554f3b31bc4faf9f4b0/pyformatter-1.3.11-cp311-cp311-linux_x86_64.whl ; python_version=='3.11' and platform_system=='Linux'",
     "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@gitlab.lan.verbio.com/api/v4/projects/949/packages/pypi/files/789824799d8386891c8dfefd81968d714eaa804eb5a3c43d32b996c37a091f99/pyformatter-1.3.11-cp310-cp310-linux_x86_64.whl ; python_version=='3.10' and platform_system=='Linux'",
@@ -82,9 +81,9 @@ cpu = [
     "onnxruntime >= 1.13.1 ; python_version!='3.7' and python_version!='3.9'",
     "numpy @ https://pypi.anaconda.org/intel/simple/numpy/1.21.4/numpy-1.21.4-16-cp37-cp37m-manylinux2014_x86_64.whl ; python_version=='3.7' and platform_system=='Linux'",
     "numpy @ https://pypi.anaconda.org/intel/simple/numpy/1.22.3/numpy-1.22.3-0-cp39-cp39-manylinux2014_x86_64.whl ; python_version=='3.9' and platform_system=='Linux'",
-    "simple-ctc @ https://__token__:glpat-WfjrtC5qsrDz34rkc5yD@gitlab.lan.verbio.com/api/v4/projects/1445/packages/pypi/files/a100d92ebad4c6d2aa137c1e0a530143f00bf953a9ee9c883b9faead4effdb8c/simple_ctc-0.0.1-cp37-cp37m-linux_x86_64.whl ; python_version=='3.7' and platform_system=='Linux'",
-    "simple-ctc @ https://__token__:glpat-WfjrtC5qsrDz34rkc5yD@gitlab.lan.verbio.com/api/v4/projects/1445/packages/pypi/files/cbf64abf1824339194ac608e7d5d4c0135e01bb56c2faac7e923972d7a373fc9/simple_ctc-0.0.1-cp39-cp39-linux_x86_64.whl ; python_version=='3.9' and platform_system=='Linux'",
-    "simple-ctc @ git+https://github.com/mthrok/ctcdecode@b1a30d7a65342012e0d2524d9bae1c5412b24a23 ; python_version!='3.7' and python_version!='3.9'"
+    "flashlight-sequence @ https://__token__:glpat-W-DgCwRNpnDnLktyN-2S@gitlab.lan.verbio.com/api/v4/projects/1486/packages/pypi/files/1b4037717b3fdeedaa9349c43b5f07be3c728955faa86fb2c2cdb9cde558f258/flashlight_sequence-0.1-cp37-cp37m-linux_x86_64.whl ; python_version=='3.7' and platform_system=='Linux'",
+    "flashlight-sequence @ https://__token__:glpat-W-DgCwRNpnDnLktyN-2S@gitlab.lan.verbio.com/api/v4/projects/1486/packages/pypi/files/be05454d2f1f160330fc80c12c65f3fddb0778dd06b2be0ce7e5ff0aa3fc189b/flashlight_sequence-0.1-cp39-cp39-linux_x86_64.whl ; python_version=='3.9' and platform_system=='Linux'",
+    "flashlight-sequence @ git+https://github.com/flashlight/sequence.git#subdirectory=bindings/python ; python_version!='3.7' and python_version!='3.9'"
 ]
 gpu = [
     "torch @ https://__token__:glpat-24_xaTZ1MS3vQCHrUPxx@gitlab.lan.verbio.com/api/v4/projects/1450/packages/pypi/files/8e401aff0afb20599bbaec6c958b5ae44c5535e14835328fea1d36a657ce3898/torch-1.12.0a0+git8c5c07c-cp37-cp37m-linux_x86_64.whl ; python_version=='3.7' and platform_system=='Linux'",
@@ -99,9 +98,9 @@ gpu = [
     "onnxruntime-gpu @ https://__token__:glpat-2aabCj5voGjGLsDZJhZw@gitlab.lan.verbio.com/api/v4/projects/1452/packages/pypi/files/93e8bd4a4aadf2ee1be72cbdd00ae9342f56df6e7697f8ab557fcc94a2c2f043/onnxruntime_gpu-1.14.0-cp37-cp37m-linux_x86_64.whl ; python_version=='3.7' and platform_system=='Linux'",
     "onnxruntime-gpu @ https://__token__:glpat-2aabCj5voGjGLsDZJhZw@gitlab.lan.verbio.com/api/v4/projects/1452/packages/pypi/files/28213e773ada613e73e61489e19807a950f4a139dd49e03d016ee0c7253d9417/onnxruntime_gpu-1.14.0-cp39-cp39-linux_x86_64.whl ; python_version=='3.9' and platform_system=='Linux'",
     "onnxruntime-gpu >= 1.13.1 ; python_version!='3.7' and python_version!='3.9'",
-    "simple-ctc @ https://__token__:glpat-nXw-FysVGGS8-xz24g3x@gitlab.lan.verbio.com/api/v4/projects/1451/packages/pypi/files/dd46c5d18a1078b5e46bb3dfde441adb3a5cc00b29939396cd522154e84abaa2/simple_ctc-0.0.1-cp37-cp37m-linux_x86_64.whl ; python_version=='3.7' and platform_system=='Linux'",
-    "simple-ctc @ https://__token__:glpat-nXw-FysVGGS8-xz24g3x@gitlab.lan.verbio.com/api/v4/projects/1451/packages/pypi/files/00c8abf05423d962eced6a108bedf70895954c28d501caad27942a7d1607c8da/simple_ctc-0.0.1-cp39-cp39-linux_x86_64.whl ; python_version=='3.9' and platform_system=='Linux'",
-    "simple-ctc @ git+https://github.com/mthrok/ctcdecode@b1a30d7a65342012e0d2524d9bae1c5412b24a23 ; python_version!='3.7' and python_version!='3.9'",
+    "flashlight-sequence @ https://__token__:glpat-W-DgCwRNpnDnLktyN-2S@gitlab.lan.verbio.com/api/v4/projects/1486/packages/pypi/files/1b4037717b3fdeedaa9349c43b5f07be3c728955faa86fb2c2cdb9cde558f258/flashlight_sequence-0.1-cp37-cp37m-linux_x86_64.whl ; python_version=='3.7' and platform_system=='Linux'",
+    "flashlight-sequence @ https://__token__:glpat-W-DgCwRNpnDnLktyN-2S@gitlab.lan.verbio.com/api/v4/projects/1486/packages/pypi/files/be05454d2f1f160330fc80c12c65f3fddb0778dd06b2be0ce7e5ff0aa3fc189b/flashlight_sequence-0.1-cp39-cp39-linux_x86_64.whl ; python_version=='3.9' and platform_system=='Linux'",
+    "flashlight-sequence @ git+https://github.com/flashlight/sequence.git#subdirectory=bindings/python ; python_version!='3.7' and python_version!='3.9'"
 ]
 test = [
     "pytest >= 6.2.5",
