--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,9 +81,9 @@ cpu = [
     "onnxruntime >= 1.13.1 ; python_version!='3.7' and python_version!='3.9'",
     "numpy @ https://pypi.anaconda.org/intel/simple/numpy/1.21.4/numpy-1.21.4-16-cp37-cp37m-manylinux2014_x86_64.whl ; python_version=='3.7' and platform_system=='Linux'",
     "numpy @ https://pypi.anaconda.org/intel/simple/numpy/1.22.3/numpy-1.22.3-0-cp39-cp39-manylinux2014_x86_64.whl ; python_version=='3.9' and platform_system=='Linux'",
-    "flashlight-sequence @ https://__token__:glpat-W-DgCwRNpnDnLktyN-2S@gitlab.lan.verbio.com/api/v4/projects/1486/packages/pypi/files/1b4037717b3fdeedaa9349c43b5f07be3c728955faa86fb2c2cdb9cde558f258/flashlight_sequence-0.1-cp37-cp37m-linux_x86_64.whl ; python_version=='3.7' and platform_system=='Linux'",
-    "flashlight-sequence @ https://__token__:glpat-W-DgCwRNpnDnLktyN-2S@gitlab.lan.verbio.com/api/v4/projects/1486/packages/pypi/files/be05454d2f1f160330fc80c12c65f3fddb0778dd06b2be0ce7e5ff0aa3fc189b/flashlight_sequence-0.1-cp39-cp39-linux_x86_64.whl ; python_version=='3.9' and platform_system=='Linux'",
-    "flashlight-sequence @ git+https://github.com/flashlight/sequence.git#subdirectory=bindings/python ; python_version!='3.7' and python_version!='3.9'"
+    "flashlight-sequence @ https://__token__:glpat-W-DgCwRNpnDnLktyN-2S@gitlab.lan.verbio.com/api/v4/projects/1486/packages/pypi/files/dddc2e4e4be8b728a4750759d2efa08191db44f43ccc450a05984cc0a3677298/flashlight_sequence-0.1-cp37-cp37m-linux_x86_64.whl ; python_version=='3.7' and platform_system=='Linux'",
+    "flashlight-sequence @ https://__token__:glpat-W-DgCwRNpnDnLktyN-2S@gitlab.lan.verbio.com/api/v4/projects/1486/packages/pypi/files/e6c5655beebd90f110a203d2c8c4ee14250ae69c5ded58420141a1ac3f9bcfe2/flashlight_sequence-0.1-cp39-cp39-linux_x86_64.whl ; python_version=='3.9' and platform_system=='Linux'",
+    "flashlight-sequence @ git+https://gitlab.lan.verbio.com/csr/asr4-python-wheels/cpu/flashlight-sequence.git ; python_version!='3.7' and python_version!='3.9'"
 ]
 gpu = [
     "torch @ https://__token__:glpat-24_xaTZ1MS3vQCHrUPxx@gitlab.lan.verbio.com/api/v4/projects/1450/packages/pypi/files/8e401aff0afb20599bbaec6c958b5ae44c5535e14835328fea1d36a657ce3898/torch-1.12.0a0+git8c5c07c-cp37-cp37m-linux_x86_64.whl ; python_version=='3.7' and platform_system=='Linux'",
@@ -98,9 +98,9 @@ gpu = [
     "onnxruntime-gpu @ https://__token__:glpat-2aabCj5voGjGLsDZJhZw@gitlab.lan.verbio.com/api/v4/projects/1452/packages/pypi/files/93e8bd4a4aadf2ee1be72cbdd00ae9342f56df6e7697f8ab557fcc94a2c2f043/onnxruntime_gpu-1.14.0-cp37-cp37m-linux_x86_64.whl ; python_version=='3.7' and platform_system=='Linux'",
     "onnxruntime-gpu @ https://__token__:glpat-2aabCj5voGjGLsDZJhZw@gitlab.lan.verbio.com/api/v4/projects/1452/packages/pypi/files/28213e773ada613e73e61489e19807a950f4a139dd49e03d016ee0c7253d9417/onnxruntime_gpu-1.14.0-cp39-cp39-linux_x86_64.whl ; python_version=='3.9' and platform_system=='Linux'",
     "onnxruntime-gpu >= 1.13.1 ; python_version!='3.7' and python_version!='3.9'",
-    "flashlight-sequence @ https://__token__:glpat-W-DgCwRNpnDnLktyN-2S@gitlab.lan.verbio.com/api/v4/projects/1486/packages/pypi/files/1b4037717b3fdeedaa9349c43b5f07be3c728955faa86fb2c2cdb9cde558f258/flashlight_sequence-0.1-cp37-cp37m-linux_x86_64.whl ; python_version=='3.7' and platform_system=='Linux'",
-    "flashlight-sequence @ https://__token__:glpat-W-DgCwRNpnDnLktyN-2S@gitlab.lan.verbio.com/api/v4/projects/1486/packages/pypi/files/be05454d2f1f160330fc80c12c65f3fddb0778dd06b2be0ce7e5ff0aa3fc189b/flashlight_sequence-0.1-cp39-cp39-linux_x86_64.whl ; python_version=='3.9' and platform_system=='Linux'",
-    "flashlight-sequence @ git+https://github.com/flashlight/sequence.git#subdirectory=bindings/python ; python_version!='3.7' and python_version!='3.9'"
+    "flashlight-sequence @ https://__token__:glpat-W-DgCwRNpnDnLktyN-2S@gitlab.lan.verbio.com/api/v4/projects/1486/packages/pypi/files/dddc2e4e4be8b728a4750759d2efa08191db44f43ccc450a05984cc0a3677298/flashlight_sequence-0.1-cp37-cp37m-linux_x86_64.whl ; python_version=='3.7' and platform_system=='Linux'",
+    "flashlight-sequence @ https://__token__:glpat-W-DgCwRNpnDnLktyN-2S@gitlab.lan.verbio.com/api/v4/projects/1486/packages/pypi/files/e6c5655beebd90f110a203d2c8c4ee14250ae69c5ded58420141a1ac3f9bcfe2/flashlight_sequence-0.1-cp39-cp39-linux_x86_64.whl ; python_version=='3.9' and platform_system=='Linux'",
+    "flashlight-sequence @ git+https://gitlab.lan.verbio.com/csr/asr4-python-wheels/gpu/flashlight-sequence.git ; python_version!='3.7' and python_version!='3.9'"
 ]
 test = [
     "pytest >= 6.2.5",
