--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,16 +15,15 @@ stages:
 image: docker.registry.verbio.com/engineering/devops/debian10-citbx-cpp-rust:latest
 
 variables:
-  DOCKER_TESTING_IMAGE_NAME: docker.registry.verbio.com/csr/testing/asr4
-  DOCKER_STAGING_IMAGE_NAME: docker.registry.verbio.com/csr/staging/asr4
-  DOCKER_STABLE_IMAGE_NAME: docker.registry.verbio.com/csr/stable/asr4
-  DOCKER_SPEECH_CENTER_IMAGE_NAME: docker.registry.verbio.com/voice-center/testing/asr4
   DOCKER_IMAGE_VERSION: $CI_COMMIT_REF_SLUG
   MODELS_PATH: /mnt/shared/squad2/projects/asr4models/
+  VERBIO_REGISTRY_URL: docker.registry.verbio.com
   AWS_ECR_URL: 321880733545.dkr.ecr.us-east-1.amazonaws.com
   AWS_REGION: us-east-1
-  DOCKER_AWS_TEST_IMAGE_NAME: csr/testing/asr4
-  DOCKER_AWS_RELEASE_IMAGE_NAME: voice-center/testing/asr4
+  DOCKER_TESTING_IMAGE_NAME:  csr/testing/asr4
+  DOCKER_STAGING_IMAGE_NAME:  csr/staging/asr4
+  DOCKER_STABLE_IMAGE_NAME:   csr/stable/asr4
+  DOCKER_SPEECH_CENTER_IMAGE_NAME: voice-center/testing/asr4
 
 settings:
   stage: .pre
@@ -41,40 +40,28 @@ settings:
 
 lint:python:
   stage: lint
+  only:
+    - tags
+    - merge_requests
+    - pushes
+    - branches
+    - master
+    - web
   before_script:
     - pip install flake8==3.9.2 black==22.6.0
   script:
     - black --check .
     - flake8 --exit-zero --show-source --statistics
 
-lint:rust:stable:
-  stage: lint
-  image: docker.registry.verbio.com/rust/centos:stable
-  variables:
-    RUSTC_WRAPPER: sccache
-    RUST_BACKTRACE: "FULL"
-  script:
-    - cargo --version
-    - rustc --version
-    - cargo fmt --all -- --check
-    - cargo clippy --all --all-targets -- -D warnings
-
-lint:rust:nightly:
-  stage: lint
-  image: docker.registry.verbio.com/rust/centos:stable
-  variables:
-    RUSTC_WRAPPER: sccache
-    RUST_BACKTRACE: "FULL"
-  allow_failure: true
-  script:
-    - cargo +nightly --version
-    - cargo fmt --all -- --check
-    - cargo +nightly clippy --all --all-targets -- -D warnings
-
 
 
 unit-testing:
   stage: test
+  only:
+    - tags
+    - merge_requests
+    - master
+    - web
   before_script:
     - pip install .[server,cpu,test]
   script:
@@ -88,22 +75,13 @@ unit-testing:
       - coverage/**
   coverage: '/^TOTAL\s+\d+\s+\d+\s+(\d+\.?\d*)\%$/'
 
-unit-testing:rust:
-  stage: test
-  before_script:
-    - cargo install cargo-tarpaulin 
-  script:
-    - cargo --version
-    - cargo test --all
-    - cargo tarpaulin -o Html --all --avoid-cfg-tarpaulin
-  artifacts:
-    expire_in: 5 days
-    paths:
-      - tarpaulin-report.html
-  coverage: '/^(\d+\.\d*)\% coverage, .+$/'
-
 functional-testing:endpoints:
   stage: test
+  only:
+    - tags
+    - merge_requests
+    - master
+    - web
   before_script:
     - wget https://github.com/bojand/ghz/releases/download/v0.111.0/ghz-linux-x86_64.tar.gz
     - tar -xzf ghz-linux-x86_64.tar.gz
@@ -117,6 +95,11 @@ functional-testing:endpoints:
 
 functional-testing:cpu:
   stage: test
+  only:
+    - tags
+    - merge_requests
+    - master
+    - web
   before_script:
     - pip install .[server,cpu,test]
   script:
@@ -124,6 +107,11 @@ functional-testing:cpu:
 
 functional-testing:e2e:
   stage: test
+  only:
+    - tags
+    - merge_requests
+    - master
+    - web
   before_script:
     - apt-get -y -q update && apt-get install -y asrtest-eval
     - pip install .[server,cpu,test]
@@ -137,7 +125,7 @@ integration-testing:cpu:
   stage: test
   only:
     - tags
-    - branches
+    - merge_requests
     - web
     - master
   before_script:
@@ -153,7 +141,7 @@ integration-testing:gpu:
   image: docker.registry.verbio.com/engineering/devops/debian10-intel-oneapi-python-cuda-tensorrt:3.9
   only:
     - tags
-    - branches
+    - merge_requests
     - web
     - master
   tags:
@@ -193,28 +181,9 @@ build:python:
     reports:
       dotenv: settings.env
 
-build:rust:
-  stage: package
-  only:
-    - tags
-  script:
-    - cargo --version
-    - cargo build --release
-    # - cpack -G "DEB;RPM" ./
-    # - cargo deb -v
-    # - mv *.deb ../
-    # - mv *.rpm ../
-  artifacts:
-    expire_in: 2 days
-    paths:
-      - "*.deb"
-      - "*.rpm"
-
-
-
 image:build:cpu:
   variables:
-    IMAGE_NAME: "${DOCKER_TESTING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+    IMAGE_NAME: "${VERBIO_REGISTRY_URL}/${DOCKER_TESTING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
     DOCKERFILE: "Dockerfile.debian"
     DEVICE: "cpu"
   extends: .template_docker_build
@@ -223,7 +192,7 @@ image:build:cpu:
 
 image:build:gpu:
   variables:
-    IMAGE_NAME: "${DOCKER_TESTING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+    IMAGE_NAME: "${VERBIO_REGISTRY_URL}/${DOCKER_TESTING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
     DEVICE: "gpu"
     DOCKERFILE: "Dockerfile.debian-gpu"
   extends: .template_docker_build
@@ -232,7 +201,7 @@ image:build:gpu:
 
 image:release:cpu:
   variables:
-    IMAGE_NAME: "${DOCKER_TESTING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+    IMAGE_NAME: "${VERBIO_REGISTRY_URL}/${DOCKER_TESTING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
     DOCKERFILE: "Dockerfile.debian"
     DEVICE: "cpu"
   extends: .template_docker_deploy
@@ -241,7 +210,7 @@ image:release:cpu:
 
 image:release:gpu:
   variables:
-    IMAGE_NAME: "${DOCKER_TESTING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+    IMAGE_NAME: "${VERBIO_REGISTRY_URL}/${DOCKER_TESTING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
     DEVICE: "gpu"
     DOCKERFILE: "Dockerfile.debian-gpu"
   extends: .template_docker_deploy
@@ -286,7 +255,7 @@ image:release:gpu:
 testing:integration-testing:cpu:
   extends: .template:integration-testing
   services:
-    - name: ${DOCKER_TESTING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}
+    - name: ${VERBIO_REGISTRY_URL}/${DOCKER_TESTING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}
       alias: asr4-server
       command: ["env", "/bin/bash", "-c", "/init.sh"]
   variables:
@@ -302,7 +271,7 @@ testing:integration-testing:gpu:
     # Launch ASR4 server on GPU
     - export JOB_DOCKER_ID=$(docker ps -q -f "label=com.gitlab.gitlab-runner.job.id=$CI_JOB_ID" -f "label=com.gitlab.gitlab-runner.type=build")
     - docker kill asr4-gpu-${LANGUAGE} || true && docker rm asr4-gpu-${LANGUAGE} || true
-    - docker run --name asr4-gpu-${LANGUAGE} -d --gpus=all --network="container:$JOB_DOCKER_ID" -e LOG_LEVEL=DEBUG ${DOCKER_TESTING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}
+    - docker run --name asr4-gpu-${LANGUAGE} -d --gpus=all --network="container:$JOB_DOCKER_ID" -e LOG_LEVEL=DEBUG ${VERBIO_REGISTRY_URL}/${DOCKER_TESTING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}
     # Install the remaining testing dependencies
     - !reference [.template:integration-testing, before_script]
   after_script:
@@ -347,21 +316,20 @@ staging:promote:
     matrix:
       - LANGUAGE: [en-us, es, pt-br]
   script:
-    - OLD_NAME="${DOCKER_TESTING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
-    - NEW_CPU_NAME="${DOCKER_STAGING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+    - OLD_NAME="${VERBIO_REGISTRY_URL}/${DOCKER_TESTING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+    - NEW_CPU_NAME="${VERBIO_REGISTRY_URL}/${DOCKER_STAGING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
     - docker tag $OLD_NAME $NEW_CPU_NAME
     - docker push $NEW_CPU_NAME
-    - OLD_NAME="${DOCKER_TESTING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
-    - NEW_GPU_NAME="${DOCKER_STAGING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+    - OLD_NAME="${VERBIO_REGISTRY_URL}/${DOCKER_TESTING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+    - NEW_GPU_NAME="${VERBIO_REGISTRY_URL}/${DOCKER_STAGING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
     - docker tag $OLD_NAME $NEW_GPU_NAME
     - docker push $NEW_GPU_NAME
     - echo "Push to Amazon"
-    - sh deploy/docker/amazon_login.sh "${AWS_ACCESS_KEY_ID}" "${AWS_SECRET_ACCESS_KEY}" "${AWS_REGION}" "${AWS_ECR_URL}" "${DOCKER_AWS_TEST_IMAGE_NAME}" "${LANGUAGE}"
-    - docker tag $NEW_CPU_NAME "${AWS_ECR_URL}/${DOCKER_AWS_TEST_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
-    - docker push "${AWS_ECR_URL}/${DOCKER_AWS_TEST_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
-    - docker tag $NEW_GPU_NAME "${AWS_ECR_URL}/${DOCKER_AWS_TEST_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
-    - docker push "${AWS_ECR_URL}/${DOCKER_AWS_TEST_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
-
+    - sh deploy/docker/amazon_login.sh "${AWS_ACCESS_KEY_ID}" "${AWS_SECRET_ACCESS_KEY}" "${AWS_REGION}" "${AWS_ECR_URL}" "${DOCKER_TESTING_IMAGE_NAME}" "${LANGUAGE}"
+    - docker tag $NEW_CPU_NAME "${AWS_ECR_URL}/${DOCKER_TESTING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+    - docker push "${AWS_ECR_URL}/${DOCKER_TESTING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+    - docker tag $NEW_GPU_NAME "${AWS_ECR_URL}/${DOCKER_TESTING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+    - docker push "${AWS_ECR_URL}/${DOCKER_TESTING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
 
 
 asr4:benchmark:
@@ -394,12 +362,12 @@ stable:promote:
     matrix:
       - LANGUAGE: [en-us, es, pt-br]
   script:
-    - OLD_NAME="${DOCKER_STAGING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
-    - NEW_CPU_NAME="${DOCKER_STABLE_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+    - OLD_NAME="${VERBIO_REGISTRY_URL}/${DOCKER_STAGING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+    - NEW_CPU_NAME="${VERBIO_REGISTRY_URL}/${DOCKER_STABLE_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
     - docker tag $OLD_NAME $NEW_CPU_NAME
     - docker push $NEW_CPU_NAME
-    - OLD_NAME="${DOCKER_STAGING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
-    - NEW_GPU_NAME="${DOCKER_STABLE_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+    - OLD_NAME="${VERBIO_REGISTRY_URL}/${DOCKER_STAGING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+    - NEW_GPU_NAME="${VERBIO_REGISTRY_URL}/${DOCKER_STABLE_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
     - docker tag $OLD_NAME $NEW_GPU_NAME
     - docker push $NEW_GPU_NAME
 
@@ -413,24 +381,26 @@ speech-center:promote:
     matrix:
       - LANGUAGE: [en-us, es, pt-br]
   script:
-    - OLD_NAME="${DOCKER_STAGING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
-    - NEW_CPU_NAME="${DOCKER_SPEECH_CENTER_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
-    - NEW_LATEST_NAME="${DOCKER_SPEECH_CENTER_IMAGE_NAME}-${LANGUAGE}:latest"
+    - OLD_NAME="${VERBIO_REGISTRY_URL}/${DOCKER_STAGING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+    - NEW_CPU_NAME="${VERBIO_REGISTRY_URL}/${DOCKER_SPEECH_CENTER_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+    - NEW_LATEST_NAME="${VERBIO_REGISTRY_URL}/${DOCKER_SPEECH_CENTER_IMAGE_NAME}-${LANGUAGE}:latest"
     - docker tag $OLD_NAME $NEW_CPU_NAME
     - docker tag $OLD_NAME $NEW_LATEST_NAME
-    - docker push "${DOCKER_SPEECH_CENTER_IMAGE_NAME}-${LANGUAGE}"
-    - OLD_NAME="${DOCKER_STAGING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
-    - NEW_GPU_NAME="${DOCKER_SPEECH_CENTER_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
-    - NEW_LATEST_NAME="${DOCKER_SPEECH_CENTER_IMAGE_NAME}-gpu-${LANGUAGE}:latest"
+    - docker push $NEW_CPU_NAME
+    - docker push $NEW_LATEST_NAME
+    - OLD_NAME="${VERBIO_REGISTRY_URL}/${DOCKER_STAGING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+    - NEW_GPU_NAME="${VERBIO_REGISTRY_URL}/${DOCKER_SPEECH_CENTER_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+    - NEW_LATEST_NAME="${VERBIO_REGISTRY_URL}/${DOCKER_SPEECH_CENTER_IMAGE_NAME}-gpu-${LANGUAGE}:latest"
     - docker tag $OLD_NAME $NEW_GPU_NAME
     - docker tag $OLD_NAME $NEW_LATEST_NAME
-    - docker push "${DOCKER_SPEECH_CENTER_IMAGE_NAME}-gpu-${LANGUAGE}"
+    - docker push $NEW_GPU_NAME
+    - docker push $NEW_LATEST_NAME
     - echo "Push to Amazon"
     - sh deploy/docker/amazon_login.sh "${AWS_ACCESS_KEY_ID}" "${AWS_SECRET_ACCESS_KEY}" "${AWS_REGION}" "${AWS_ECR_URL}" "${DOCKER_AWS_RELEASE_IMAGE_NAME}" "${LANGUAGE}"
-    - docker tag $NEW_CPU_NAME "${AWS_ECR_URL}/${DOCKER_AWS_RELEASE_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
-    - docker push "${AWS_ECR_URL}/${DOCKER_AWS_RELEASE_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
-    - docker tag $NEW_GPU_NAME "${AWS_ECR_URL}/${DOCKER_AWS_RELEASE_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
-    - docker push "${AWS_ECR_URL}/${DOCKER_AWS_RELEASE_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+    - docker tag $NEW_CPU_NAME "${AWS_ECR_URL}/${DOCKER_SPEECH_CENTER_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+    - docker push "${AWS_ECR_URL}/${DOCKER_SPEECH_CENTER_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+    - docker tag $NEW_GPU_NAME "${AWS_ECR_URL}/${DOCKER_SPEECH_CENTER_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+    - docker push "${AWS_ECR_URL}/${DOCKER_SPEECH_CENTER_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
 
 
 
@@ -452,24 +422,6 @@ stable:deploy:cpu:
     - echo "Deploying CPU stable version ${DOCKER_IMAGE_VERSION} into ${NOMAD_ADDR}"
     - NOMAD_VAR_VERSION=${DOCKER_IMAGE_VERSION} NOMAD_VAR_ASR4_JOB_ID=${JOB_ID} NOMAD_VAR_GITLAB_TOKEN=${GITLAB_TOKEN} nomad job run asr4-stable.nomad
 
-#stable:deploy:gpu:
-#  stage: stable-deploy
-#  image: docker.registry.verbio.com/cognitive/nomad:1.0.2
-#  only:
-#    - tags
-#  dependencies:
-#    - build:python
-#  environment:
-#    name: production/asr4-gpu
-#    action: start
-#  script:
-#    - cd deploy/nomad
-#    - export NOMAD_IP=$(echo ${CI_ENVIRONMENT_URL} | cut -d / -f 3 | cut -d ':' -f 1)
-#    - export NOMAD_ADDR=http://$NOMAD_IP:4646
-#    - echo "Deploying GPU stable version ${DOCKER_IMAGE_VERSION} into ${NOMAD_ADDR}"
-#    - NOMAD_VAR_VERSION=${DOCKER_IMAGE_VERSION} NOMAD_VAR_ASR4_JOB_ID=${JOB_ID} NOMAD_VAR_GITLAB_TOKEN=${GITLAB_TOKEN} nomad job run asr4-stable-gpu.nomad
-
-
 
 cleanup:
   stage: cleanup
@@ -480,17 +432,18 @@ cleanup:
   only:
     - tags
   script:
-    - docker image rm "${DOCKER_TESTING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
-    - docker image rm "${DOCKER_STAGING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
-    - docker image rm "${DOCKER_STABLE_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
-    - docker image rm "${DOCKER_SPEECH_CENTER_IMAGE_NAME}-${LANGUAGE}:latest"
-    - docker image rm "${DOCKER_SPEECH_CENTER_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
-    - docker image rm "${DOCKER_TESTING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
-    - docker image rm "${DOCKER_STAGING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
-    - docker image rm "${DOCKER_STABLE_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
-    - docker image rm "${DOCKER_SPEECH_CENTER_IMAGE_NAME}-gpu-${LANGUAGE}:latest"
-    - docker image rm "${DOCKER_SPEECH_CENTER_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
-
+    - docker image rm "${VERBIO_REGISTRY_URL}/${DOCKER_TESTING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+    - docker image rm "${VERBIO_REGISTRY_URL}/${DOCKER_STAGING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+    - docker image rm "${VERBIO_REGISTRY_URL}/${DOCKER_STABLE_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+    - docker image rm "${VERBIO_REGISTRY_URL}/${DOCKER_SPEECH_CENTER_IMAGE_NAME}-${LANGUAGE}:latest"
+    - docker image rm "${VERBIO_REGISTRY_URL}/${DOCKER_SPEECH_CENTER_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+    - docker image rm "${VERBIO_REGISTRY_URL}/${DOCKER_TESTING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+    - docker image rm "${VERBIO_REGISTRY_URL}/${DOCKER_STAGING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+    - docker image rm "${VERBIO_REGISTRY_URL}/${DOCKER_STABLE_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+    - docker image rm "${VERBIO_REGISTRY_URL}/${DOCKER_SPEECH_CENTER_IMAGE_NAME}-gpu-${LANGUAGE}:latest"
+    - docker image rm "${VERBIO_REGISTRY_URL}/${DOCKER_SPEECH_CENTER_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+    - docker image rm "${AWS_ECR_URL}/${DOCKER_SPEECH_CENTER_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+    - docker image rm "${AWS_ECR_URL}/${DOCKER_SPEECH_CENTER_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
 
 
 speech-center-integration-testing:en-us:cpu:
@@ -543,4 +496,6 @@ speech-center-integration-testing:pt-br:gpu:
   trigger:
     project: voice-center/operations/integration/integration-tests
     strategy: depend
+
+
 
