--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,7 @@ variables:
   AWS_ECR_URL: 321880733545.dkr.ecr.us-east-1.amazonaws.com
   SPEECH_CENTER_AWS_ECR_URL: 321880733545.dkr.ecr.us-east-2.amazonaws.com
   AWS_REGION: us-east-1
+  AWS_SC_REGION: us-east-2
   DOCKER_TESTING_IMAGE_NAME:  csr/testing/asr4
   DOCKER_STAGING_IMAGE_NAME:  csr/staging/asr4
   DOCKER_STABLE_IMAGE_NAME:   csr/stable/asr4
@@ -405,7 +406,7 @@ speech-center:promote:
     - docker push $NEW_GPU_NAME
     - docker push $NEW_LATEST_NAME
     - echo "Push to Amazon"
-    - sh deploy/docker/amazon_login.sh "${AWS_ACCESS_KEY_ID}" "${AWS_SECRET_ACCESS_KEY}" "${AWS_REGION}" "${SPEECH_CENTER_AWS_ECR_URL}" "${DOCKER_AWS_RELEASE_IMAGE_NAME}" "${LANGUAGE}"
+    - sh deploy/docker/amazon_login.sh "${AWS_ACCESS_KEY_ID}" "${AWS_SECRET_ACCESS_KEY}" "${AWS_SC_REGION}" "${SPEECH_CENTER_AWS_ECR_URL}" "${DOCKER_AWS_RELEASE_IMAGE_NAME}" "${LANGUAGE}"
     - docker tag $NEW_CPU_NAME "${SPEECH_CENTER_AWS_ECR_URL}/${DOCKER_SPEECH_CENTER_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
     - docker push "${SPEECH_CENTER_AWS_ECR_URL}/${DOCKER_SPEECH_CENTER_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
     - docker tag $NEW_GPU_NAME "${SPEECH_CENTER_AWS_ECR_URL}/${DOCKER_SPEECH_CENTER_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
