remove -a and added --force to docker image remove
To avoid removing weird dependent images
and error when removing an image that does not exist.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -440,7 +440,7 @@ cleanup:
     - merge_requests
   script:
     - docker images --filter 'label=service=asr4'
-    - docker images --filter 'label=service=asr4' -qa | xargs docker image rm
+    - docker images --filter 'label=service=asr4' -q | xargs docker image rm --force
 
 speech-center-integration-testing:en-us:cpu:
   variables:
