--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -439,7 +439,7 @@ cleanup:
     - merge_requests
   script:
     - docker images --filter 'label=service=asr4'
-    - docker images --filter 'label=service=asr4' -q | xargs -r docker image rm --force
+    - docker images --filter 'label=service=asr4' -q | xargs docker image rm --force
 
 speech-center-integration-testing:en-us:cpu:
   variables:
