--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,7 +52,7 @@ lint:python:
   before_script:
     - pip install flake8==3.9.2 black==22.6.0
   script:
-    - black --check .
+    - black --check --diff .
     - flake8 --exit-zero --show-source --statistics
 
 
