--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,6 @@
+stages:
+  - changelog
+
 image: docker.registry.verbio.com/engineering/devops/debian10-citbx-cpp-rust:latest
 
 variables:
@@ -15,3 +18,8 @@ settings:
   artifacts:
     reports:
       dotenv: settings.env
+
+changelog:
+  stage: changelog
+  script:
+    - curl --header "PRIVATE-TOKEN: ${PRIVATE_TOKEN}" "https://gitlab.com/api/v4/projects/${CI_PROJECT_ID}/repository/changelog?version=999.999.999&to=c7b13d890832c84b3ec2be205c5822c322f045f4"
