Adding the LM vocabulary

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -246,6 +246,7 @@ image:release:gpu:
     - cp ${MODELS_PATH}/wav2vec_small_10m.dynamic.uint8.dict.ltr.txt deploy/docker/
     - cp ${MODELS_PATH}/formatter/format-model.${LANGUAGE}* deploy/docker/
     - cp ${MODELS_PATH}/asr4-${LANGUAGE}-lm-${MODEL_VERSION}.bin deploy/docker/${MODELS_PATH}/asr4-${LANGUAGE}-lm.bin || true
+    - cp ${MODELS_PATH}/asr4-${LANGUAGE}-lm-${MODEL_VERSION}.lexicon.txt deploy/docker/${MODELS_PATH}/asr4-${LANGUAGE}-lm.bin || true
     - touch deploy/docker/dummy
     - cp bin/server.py deploy/docker/
   script:
