--- a/deploy/docker/Dockerfile.debian-gpu
+++ b/deploy/docker/Dockerfile.debian-gpu
@@ -29,6 +29,7 @@ LABEL service=asr4
 LABEL device=GPU
 LABEL vendor="Verbio Technologies"
 LABEL model_version=${MODEL_VERSION}
+LABEL lm_version=${MODEL_VERSION}
 LABEL service_version=${VERSION}
 LABEL language=${LANGUAGE}
 LABEL flags="LOG_LEVEL${LOG_LEVEL}, WORKERS=${WORKERS}"
