--- a/deploy/docker/Dockerfile.debian
+++ b/deploy/docker/Dockerfile.debian
@@ -1,6 +1,7 @@
 FROM docker.registry.verbio.com/engineering/devops/python:3.9-slim
 
 ARG MODEL_VERSION
+ARG LM_VERSION
 ARG VERSION
 ARG LANGUAGE
 ENV WORKERS=${WORKERS}
@@ -27,7 +28,7 @@ LABEL service=asr4
 LABEL device=CPU
 LABEL vendor="Verbio Technologies"
 LABEL model_version=${MODEL_VERSION}
-LABEL lm_version=${MODEL_VERSION}
+LABEL lm_version=${LM_VERSION}
 LABEL service_version=${VERSION}
 LABEL language=${LANGUAGE}
 LABEL flags="LOG_LEVEL${LOG_LEVEL}, WORKERS=${WORKERS}"
