New parsing bussiness logic added (not finished) / New Unit testing added / new toml

--- a/asr4_config.toml
+++ b/asr4_config.toml
@@ -8,28 +8,28 @@ port = 50051
 gpu = 1
 
 [en-us]
-cpu = "1.1.0"
-gpu = "1.2.0"
-lm = "1.2.0"
+cpu_version = "1.1.0"
+gpu_version = "1.2.0"
+lm_version = "1.2.0"
 lm-weight = "0.91715"
 word-score = "-0.29761"
 sil-weight = "0.31423"
-formatter = "format-model.en-us.fm"
+formatter = "format-model.en-us-1.0.1.fm "
 
 [es]
-cpu = "1.1.0"
-gpu = "1.2.0"
-lm = "1.2.0"
+cpu_version = "1.1.0"
+gpu_version = "1.2.0"
+lm_version = "1.2.0"
 lm-weight = "1.0"
 word-score = "-0.25422"
 sil-weight = "0.24403"
-formatter = "format-model.es.fm"
+formatter = "format-model.es-es-1.1.0.fm"
 
 [pt-br]
-cpu = "1.1.0"
-gpu = "1.2.0"
-lm = "1.2.0"
+cpu_version = "1.1.0"
+gpu_version = "1.2.0"
+lm_version = "1.2.0"
 lm-weight = "0.91447"
 word-score = "-0.56194"
 sil-weight = "0.44272"
-formatter = "format-model.pt-br.fm"
+formatter = "format-model.pt-br-1.1.0.fm"
