Force to run jobs in MR

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -171,8 +171,11 @@ integration-testing:gpu:
 build:python:
   stage: package
   only:
+  only:
     - tags
     - merge_requests
+    - master
+    - web
   before_script:
     - echo JOB_ID=$CI_JOB_ID >> settings.env
     - echo "DOCKER_IMAGE_VERSION = ${DOCKER_IMAGE_VERSION}" >> settings.env
@@ -199,7 +202,10 @@ image:build:cpu:
     DEVICE: "cpu"
   extends: .template_docker_build
   only:
+    - tags
     - merge_requests
+    - master
+    - web
 
 image:build:gpu:
   variables:
@@ -208,8 +214,10 @@ image:build:gpu:
     DOCKERFILE: "Dockerfile.debian-gpu"
   extends: .template_docker_build
   only:
+    - tags
     - merge_requests
-
+    - master
+    - web
 image:release:cpu:
   variables:
     IMAGE_NAME: "${VERBIO_REGISTRY_URL}/${DOCKER_TESTING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
@@ -279,8 +287,11 @@ testing:integration-testing:cpu:
 
 testing:integration-testing:gpu:
   extends: .template:integration-testing
-  # tags:
-  #   - gpu
+  only:
+    - tags
+    - merge_requests
+    - master
+    - web
   before_script:
     # Install docker to run ASR4 server docker
     - !reference [.install-docker, before_script]
@@ -301,8 +312,11 @@ testing:integration-testing:gpu:
 
 .template:integration-testing:
   stage: integration-testing
-  # only:
-  #   - tags
+  only:
+    - tags
+    - merge_requests
+    - master
+    - web
   parallel:
     matrix:
       - LANGUAGE: [en-us, es, pt-br]
