Try to run languages matrix and tests in cpu

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -278,12 +278,18 @@ image:release:gpu:
 
 testing:integration-testing:cpu:
   extends: .template:integration-testing
+  parallel:
+    matrix:
+      - LANGUAGE: [en-us, es, pt-br]
   services:
     - name: ${VERBIO_REGISTRY_URL}/${DOCKER_TESTING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}
       alias: asr4-server
       command: ["env", "/bin/bash", "-c", "/init.sh"]
   variables:
     ASR4_HOSTNAME: asr4-server
+  script:
+    - python3 --version
+    - pytest tests/integration/test_formatter.py --junit-xml=report.xml --verbose --capture=no
 
 testing:integration-testing:gpu:
   extends: .template:integration-testing
@@ -292,6 +298,9 @@ testing:integration-testing:gpu:
     - merge_requests
     - master
     - web
+  parallel:
+    matrix:
+      - LANGUAGE: [en-us, es, pt-br]
   before_script:
     # Install docker to run ASR4 server docker
     - !reference [.install-docker, before_script]
